fea-rs/test-data/parse-tests/bad/variation_missing_condset.fea
variation oops {
    lookup thing;
} oops;

